# rxnb

./: .editorconfig  .gitignore  Cargo.toml  License.md  Readme.md  package.json  rustfmt.toml
.github/workflows/: publish.yml  rust.yml
projects/notebook-server/: Cargo.toml  Readme.md
projects/notebook-server/src/: error.rs  lib.rs
projects/notebook-server/src/lexer/: mod.rs
projects/notebook-server/src/options/: constants.rs  mod.rs
projects/notebook-server/tests/: main.rs
projects/notebook-web/: Cargo.toml  Readme.md  Trunk.toml  index.html  package.json
projects/notebook-web/assets/: _cell.scss  _config.scss  main.scss
projects/notebook-web/src/: lib.rs  main.rs
projects/notebook-web/src/cell/: cell.rs  mod.rs  sep.rs
projects/notebook-web/src/configs/: mod.rs
projects/notebook-web/src/configs/langs/: mod.rs
projects/notebook-web/src/widgets/: mod.rs
projects/notebook-web/src/widgets/header/: mod.rs
projects/notebook-web/src/widgets/icons/: mod.rs
projects/notebook-web/src/widgets/sides/: mod.rs
projects/notebook-web/src/widgets/tabs/: mod.rs
